--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Configure port
+server.port = 8090
+
 # DataSource settings
 spring.datasource.driver = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true
@@ -25,3 +28,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.socialnetwork=INFO
 
 logging.file=friendsmanagement.log
+
