--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8090
 
 # DataSource settings
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -15,14 +15,12 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.ddl-auto = create
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.socialnetwork=INFO
