--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Configure port
-server.port = 8090
+server.port = 8080
 
 # DataSource settings
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://fmc-containar:3306/friendsmanagement?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -18,7 +18,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
