Changed Exceptions Response Details and added controller level exception hadling

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -8,9 +8,9 @@ user.password.empty = Password cannot be an empty string
 user.password.null = Password cannot be null
 user.password.min = Password should have atleast 7 characters
 requestor.email.empty = Requestor email cannot be an empty string
-requestor email.null = Requestor email cannot be null
+requestor.email.null = Requestor email cannot be null
 target.email.empty = Target email cannot be an empty string
-target email.null = Target email cannot be null
+target.email.null = Target email cannot be null
 sender.email.empty = Sender email cannot be empty
 sender.email.null = Sender email cannot be null
 sender.text.empty = Notification message cannot be an empty string
