--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8080
 
 # DataSource settings
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://fmc-containar:3306/friendsmanagement?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -15,7 +15,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
