Changed Datasource Url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8080
 
 # DataSource settings
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/friendsmanagement?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://fmc-containar:3306/friendsmanagement?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
